adjust jwtparser makefile

--- a/jwtparser/Makefile
+++ b/jwtparser/Makefile
@@ -1,4 +1,5 @@
 
 
-build-linux:
-	cargo build --release --target x86_64-unknown-linux-gnu
+quality:
+	cargo test --verbose
+	cargo clippy --verbose
