--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,5 @@
-[package]
-name = "rdtools"
-version = "0.0.1"
-edition = "2021"
-description = "Development tools written in rust"
-
-[dependencies]
-base64 = "0.22.1"
-clap = { version = "4.5.4", features = ["derive"] }
-clap-cargo = "0.14.1"
-colored = "2.1.0"
-serde_json = "1.0.116"
+[workspace]
+resolver="2"
+members = [
+"rdtools","xtask",
+]
