adding bin building to cargo toml

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -87,10 +87,10 @@ jobs:
           command: xtask
           args: coverage
 
-      - name: Upload to codecov.io
-        uses: codecov/codecov-action@v3
-        with:
-          files: coverage/*.lcov
+      # - name: Upload to codecov.io
+      #   uses: codecov/codecov-action@v3
+      #   with:
+      #     files: coverage/*.lcov
 
   lints:
     name: Lints
