--- a/.github/workflows/quality.yaml
+++ b/.github/workflows/quality.yaml
@@ -20,6 +20,10 @@ jobs:
             os: macos-latest
             target: x86_64-apple-darwin
 
+          - build: windows-gnu
+            os: windows-latest
+            target: x86_64-pc-windows-gnu
+
     steps:
       - name: Clone repository
         uses: actions/checkout@v3
