--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,9 @@
 [workspace]
 resolver = "2"
 members = ["rdtools", "xtask"]
+
+[profile.release]
+strip = true      # Automatically strip symbols from the binary
+opt-level = "s"   # Optimize for size
+lto = true        # Enable link time optimization
+codegen-units = 1 # Maximize size reduction optimizations
