removed unrequired stuff

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 resolver = "2"
-members = ["rdtools", "xtask"]
+
+members = ["rdtools"]
 
 [profile.release]
 strip = true      # Automatically strip symbols from the binary
