--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -23,10 +23,10 @@ jobs:
           - build: macos
             os: macos-latest
             target: x86_64-apple-darwin
-
-          - build: windows-gnu
-            os: windows-latest
-            target: x86_64-pc-windows-gnu
+          # getting error finding cross-rs/x86_64-pc-windows-gnu
+          # - build: windows-gnu
+          #   os: windows-latest
+          #   target: x86_64-pc-windows-gnu
 
     steps:
       - name: Clone repository
